--- a/MainApp/about.ui
+++ b/MainApp/about.ui
@@ -42,7 +42,7 @@ background-color: #2c2c2c;
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="aboutChineseLabel">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -58,13 +58,13 @@ background-color: #2c2c2c;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: #ffffff;</string>
+    <string notr="true"/>
    </property>
    <property name="text">
     <string>集成式安全审计系统</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="aboutEnglishLabel">
    <property name="geometry">
     <rect>
      <x>140</x>
@@ -80,7 +80,7 @@ background-color: #2c2c2c;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: #ffffff;</string>
+    <string notr="true"/>
    </property>
    <property name="text">
     <string>Intergrated Security Audit Environment Version 2.0</string>
@@ -295,9 +295,7 @@ background-color: transparent;
        <string>ISAE - ABOUT</string>
       </property>
       <property name="styleSheet">
-       <string notr="true">QLabel{
-color: #30acff;
-}</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>ISAE - About</string>
@@ -341,19 +339,7 @@ color: #30acff;
        <string>关闭</string>
       </property>
       <property name="styleSheet">
-       <string notr="true">QPushButton{
-background-color: #2c2c2c;
-border: 0px solid black;
-border-top: 1px solid black;
-border-right: 1px solid black;
-border-bottom: 1px solid black;
-}
-QPushButton:hover{
-background-color: #ff2f2f;
-}
-QPushButton:pressed{
-background-color: #3272ff;
-}</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string/>
